--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "react": "^15.0.0",
+    "react-bootstrap": "^0.30.3",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^1.0.0",
     "react-dom": "^15.0.0"
